# AionCore

./: .gitignore  AGENTS.md  Cargo.toml  justfile
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-ai-agent/src/: acp_agent.rs  acp_protocol.rs  acp_routes.rs  acp_runtime_snapshot.rs  agent_manager.rs  agent_runtime.rs  agent_task.rs  aionrs_agent.rs  auxiliary_routes.rs  backend_output_sink.rs  backend_protocol_sink.rs  error.rs  factory.rs  idle_scanner.rs  lib.rs  registry.rs  registry_config_option_tests.rs  registry_tests.rs  skill_manager.rs  stream_event.rs  task_manager.rs  team_guide_prompt.rs  types.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  acp_error_public.rs  agent_types_integration.rs  factory_provider_integration.rs  skill_manager_integration.rs
crates/aionui-api-types/src/: acp.rs  agent_discovery.rs  agent_error.rs  conversation.rs  custom_agent.rs  file.rs  lib.rs  response.rs
crates/aionui-api-types/tests/: response_format.rs
crates/aionui-app/: Cargo.toml
crates/aionui-app/src/: bridge.rs  lib.rs  main.rs  services.rs  state_builders.rs
crates/aionui-app/tests/: agent_integration_e2e.rs  assistants_e2e.rs  auth_e2e.rs  auxiliary_e2e.rs  (+11 more)
crates/aionui-channel/: Cargo.toml
crates/aionui-conversation/: Cargo.toml
crates/aionui-cron/: Cargo.toml
crates/aionui-file/: Cargo.toml
crates/aionui-mcp/: Cargo.toml
crates/aionui-runtime/: Cargo.toml
crates/aionui-runtime/src/: lib.rs  spawn.rs
crates/aionui-runtime/src/acp_tool_runtime/: mod.rs
docs/api-spec/: 00-module-index.md  09-channel.md  14-app-lifecycle.md
(+114 files in other folders)
